🔧 Fix layout overflow when not code highlight

--- a/frontend/src/components/system-design/article-detail-page/article-content/ArticleContent.module.scss
+++ b/frontend/src/components/system-design/article-detail-page/article-content/ArticleContent.module.scss
@@ -93,6 +93,27 @@
         }
     }
 
+    pre {
+        margin: 0;
+        padding: 16px;
+        overflow: auto;
+        line-height: 1.5;
+        border-radius: 8px;
+        background-color: #212121;
+
+        code {
+            padding: 0;
+            background-color: transparent;
+            border-radius: 0;
+            color: #EEFFFF;
+        }
+
+        :global(body.dark) & {
+            background-color: #111;
+            color: #fff;
+        }
+    }
+
     img, video {
         -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
         -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
